Bug 164717 - "Search results" dialog may report wrong count of found results
Summary: "Search results" dialog may report wrong count of found results
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:25.8.0 target:25.2.1
Keywords:
Depends on:
Blocks:
 
Reported: 2025-01-15 10:02 UTC by Mike Kaganski
Modified: 2025-01-15 16:08 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
2001 of a's (11.55 KB, application/vnd.oasis.opendocument.spreadsheet)
2025-01-15 10:02 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2025-01-15 10:02:51 UTC
Created attachment 198548 [details]
2001 of a's

Open the attachment, which has 2001 cells with "a" (in A1, A2, A3, and then continued in column A separated by empty rows).

Open "Find & Replace" dialog (Ctrl+H), enter "a" (without quotes) into the Find box, and press [Find All].

If the "Search Results" dialog is not suppressed, it will appear, with "1002 results found (only 1000 are listed)". At the same time, the status bar would show "Selected: 2001 rows, 1 column", which is the correct data.

The expected data in the dialog is: "2001 results found (only 1000 are listed)"

Regression after commit ba68e6dd7ad99ef2a2720f327813d13550b98966.
Comment 1 Mike Kaganski 2025-01-15 10:10:00 UTC
https://gerrit.libreoffice.org/c/core/+/180268
Comment 2 Commit Notification 2025-01-15 13:50:51 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4d5b3e99911acb3085dba5d66627b5737c885d85

tdf#164717: count all found cells in the dialog

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2025-01-15 16:08:13 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/b5e6962b94ca58a609199e0d56c1fe23a393011a

tdf#164717: count all found cells in the dialog

It will be available in 25.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.