tdf#164717: count all found cells in the dialog

The number of list entries is already limited in ListWrapper::Insert;
but it needs to count all the items to give a sensible output.

Change-Id: I04bd4437977c88144c929af4b45fef119e8b2a97
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/180268
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit 4d5b3e99911acb3085dba5d66627b5737c885d85)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/180290
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>